--- a/module_3/index.html
+++ b/module_3/index.html
@@ -18,7 +18,7 @@
                     <div class="navbar-brand">
                         <p class="nav-brand"> Food, LLC</p>
                     </div>
-
+                    <!--BootStrap 3.5.1 uses "d-sm-none" for xs visibility instead of "visibility-xs" -->
                     <button type="button" class="navbar-toggle collapsed d-sm-none" data-toggle="collapse" data-target="#nav-menu" aria-expanded="true">
                         <span class="sr-only"> Toggle Nav</span>
                         <span class="icon-bar"></span>
@@ -27,11 +27,13 @@
                     </button>
                 </div>
 
+                <!--Navigation Menu-->
                 <div id="nav-menu" class="collapse navbar-collapse">
                     <ul id="nav-list" class="nav navbar-nav navbar-right d-block d-sm-none">
 
                         <li class="text-center">
                             <a href="#chicken-section">
+                                <!--Jump to Chicken Section-->
                                 <p class="item">Chicken</p>
                             </a>
                             <hr class="d-block d-sm-none">
@@ -39,6 +41,7 @@
 
                         <li class="text-center">
                             <a href="#beef-section">
+                                <!--Jump to Beef Section-->
                                 <p class="item">Beef</p>
                             </a>
                             <hr class="d-block d-sm-none">
@@ -46,11 +49,11 @@
 
                         <li class="text-center">
                             <a href="#sushi-section">
+                                <!--Jump to Sushi Section-->
                                 <p class="item">Sushi</p>
                             </a>
                             <hr class="d-block d-sm-none">
                         </li>
-
                     </ul>
                 </div>
             </div>
@@ -58,7 +61,7 @@
     </header>
 
     <h1>
-        Menu
+        Our Menu
     </h1>
     <div class="row container container-fluid">
         <!--Section 1-->
