--- a/module_4/index.html
+++ b/module_4/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Module 4 Solution Starter</title>
+    <title>Module 4 Assignment</title>
     <script>
         var names = []; // DO NOT REMOVE
     </script>
@@ -13,7 +13,12 @@
 </head>
 
 <body>
-    <h1>Module 4 Solution Starter</h1>
+    <h1>Module 4 Assignment Solution</h1>
+    <div>
+        <p>
+            Assignment 4 Solution. Right Click and inspect page. Select "Console" to view script output.
+        </p>
+    </div>
 </body>
 
 </html>
